--- a/package.json
+++ b/package.json
@@ -19,11 +19,18 @@
   },
   "homepage": "https://github.com/marwaybs/vue-chat#readme",
   "devDependencies": {
+    "@parcel/transformer-vue": "2.7.0",
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.6.0",
     "parcel": "^2.7.0",
     "prettier": "^2.7.1"
+  },
+  "dependencies": {
+    "axios": "^1.1.3",
+    "pinia": "^2.0.23",
+    "vue": "^3.2.41",
+    "vue-router": "^4.1.5"
   }
 }
